--- a/registro.html
+++ b/registro.html
@@ -36,7 +36,7 @@
 			<form method="post" name="form_register" action="Registro.php" >
 
 				<div class="input-field">
-		          <input name="codigo" type="number" class="validate" placeholder="Codigo de Estudiante" required>
+		          <input name="codigo" type="number" class="validate" placeholder="Codigo de Estudiante" pattern="[0-9]{1,15}" required>
 		    	</div>
 
 		        <input name="nombre1" type="text" class="validate" placeholder="Primer Nombre" required>
@@ -48,11 +48,11 @@
 		    	</div>
 			
 				<div class="input-field">
-				<input name="apellido1" type="Text" type="text" class="validate" placeholder="Primer Apellido" required>
+				<input name="apellido1" type="text" class="validate" placeholder="Primer Apellido" required>
 				</div>	
 
 				<div class="input-field">
-				<input name="apellido2" type="Text" type="text" class="validate" placeholder="Segundo Apellido">
+				<input name="apellido2" type="text" class="validate" placeholder="Segundo Apellido">
 			
 				</div>	
 
@@ -62,14 +62,14 @@
 
 				<div class="input-field2">
 
-				<input name="password" type="password" class="validate" placeholder="Contraseña" required>
+				<input name="password" type="password" class="validate" placeholder="Contraseña" pattern="[A-Za-z0-9._-]{1,15}" required>
 			    </div>	
 
 				<div class="input-field2">
-					<input name="repassword" type="password" class="validate" placeholder="Confirmar Contraseña" required>
+					<input name="repassword" type="password" class="validate" placeholder="Confirmar Contraseña" pattern="[A-Za-z0-9._-]{1,15}" required>
 				    </div>	
 	    
-				  <button class="btn waves-effect waves-light offset-s3"><i class="large material-icons"><a href="/">arrow_back</a></i></button>
+				  <button class="btn waves-effect waves-light offset-s3"><i class="large material-icons"><a href="/appsistencia">arrow_back</a></i></button>
 					<button class="btn waves-effect waves-light offset-s3" type="submit" name="action">Registrarse
 			    	<i class="material-icons right">send</i>
 		    
