Eliminacion del index.html que se habia creado a modo de prueba en la parte inicial

--- a/registro.html
+++ b/registro.html
@@ -69,7 +69,7 @@
 					<input name="repassword" type="password" class="validate" placeholder="Confirmar Contraseña" pattern="[A-Za-z0-9._-]{1,15}" required>
 				    </div>	
 	    
-				  <button class="btn waves-effect waves-light offset-s3"><i class="large material-icons"><a href="/appsistencia">arrow_back</a></i></button>
+				  <a href="/appsistencia"><button class="btn waves-effect waves-light offset-s3"><i class="large material-icons">arrow_back</a></i></button>
 					<button class="btn waves-effect waves-light offset-s3" type="submit" name="action">Registrarse
 			    	<i class="material-icons right">send</i>
 		    
