--- a/registro.html
+++ b/registro.html
@@ -36,7 +36,7 @@
 					<form method="post" name="form_register" action="Registro.php" >
 
 						<div class="input-field">
-							<input name="codigo" type="number" class="validate" placeholder="Codigo de Estudiante" pattern="[0-9]{1,15}" required>
+							<input name="codigo" type="tel" class="validate" placeholder="Ej. 4150510000" pattern="[0-9]{1,15}" data-toggle="tooltip" title="Ej. 4150510000" required autofocus>
 						</div>
 
 						<input name="nombre1" type="text" class="validate" placeholder="Primer Nombre" required>
