--- a/exits.html
+++ b/exits.html
@@ -14,11 +14,12 @@
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Confirmacion!</h4>
+                <h4 class="modal-title"><strong>Aviso!</strong></h4>
             </div>
             <div class="modal-body">
-                <p>Usuario creado exitosamente.</p>
-                <p>Por favor, volver e iniciar sesion.</p>
+                <div class="alert alert-danger alert-dismissable">
+                     Ya existe este codigo.
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"><a href="/Appsistencia">Close</a></button>
