Segunda Prueba Github desde la UDC Piedra Bolivar

--- a/Error.html
+++ b/Error.html
@@ -14,7 +14,7 @@
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title"><strong>Contraseña Incorrecta!</strong></h4>
+                <h4 class="modal-title"><strong>Contraseña Erronea!</strong></h4>
             </div>
             <div class="modal-body">
                 <div class="alert alert-danger alert-dismissable">
